# nao

./: .env.example  .gitignore  Dockerfile  WORKFLOW_STATE.md
apps/backend/: package.json  vitest.config.ts
apps/backend/fastapi/: main.py  test_main.py
apps/backend/migrations-postgres/: 0048_user_preferences.sql  0049_add_branding_primary_color.sql
apps/backend/migrations-postgres/meta/: 0048_snapshot.json  0049_snapshot.json  _journal.json
apps/backend/migrations-sqlite/: 0048_user_preferences.sql  0049_add_branding_primary_color.sql
apps/backend/migrations-sqlite/meta/: 0048_snapshot.json  0049_snapshot.json  _journal.json
apps/backend/src/: app.ts  auth.ts  env.ts
apps/backend/src/agents/: providers.ts
apps/backend/src/db/: abstractSchema.ts  pg-schema.ts  sqlite-schema.ts
apps/backend/src/mcp/: auth.ts  routes.ts
apps/backend/src/middleware/: auth.ts  authentik.ts
apps/backend/src/queries/: branding.queries.ts  chat.queries.ts  organization.queries.ts  project.queries.ts  shared-story.queries.ts  (+2 more)
apps/backend/tests/: auth-config-oidc.test.ts  authentik-auth.test.ts  prompt-cache.test.ts  tenant-utils.test.ts  tools.test.ts
apps/frontend/src/: main.tsx  routeTree.gen.ts  styles.css
apps/shared/src/: date.ts  types.ts
apps/shared/tests/: date-format.test.ts
cli/: README.md  build.py
cli/nao_core/config/: base.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/nao_sdk/: __init__.py  _errors.py  client.py  types.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  types.ts
(+176 files in other folders)
